# Annotation-Tool

./: .gitignore  .travis.yml  Annotation-Tool.njsproj  Annotation-Tool.sln  CMakeLists.txt  LICENSE.lib.txt  README.md  license-check.txt  npm-shrinkwrap.json  package.json  travis-build-opencv  tsconfig.json  typings.json  webpack.config.js
app/: index.html
src/: index.ejs  main.electron.js  main.renderer.ts  package.electron.json  polyfills.ts  vendor.ts
src/app/: app.component.html  app.component.ts  app.module.ts  app.route.ts  index.ejs
src/app-config/: zones.json
src/app/annotator/: annotator-routing.module.ts  annotator.component.html  annotator.component.scss  annotator.component.ts  annotator.module.ts  annotator.route.ts
src/app/annotator/control-panel/: control-panel.component.html  control-panel.component.ts  control-panel.module.ts  control-panel.route.ts
src/app/annotator/frame-canvas/: frame-canvas.component.html  frame-canvas.component.ts  frame-canvas.module.ts
src/app/hub-start/: hub-start.component.html  hub-start.component.scss  hub-start.component.ts  hub-start.module.ts  hub-start.route.ts
src/app/hub-workspace/: hub-workspace-routing.module.ts  hub-workspace.component.html  hub-workspace.component.ts  hub-workspace.module.ts
src/app/shared/: shared.module.ts
src/styles/: style.scss
src/utils/camera-tool/: CameraTool.cpp
src/utils/includes/: ImageDistance.hpp  LensCalibration.cpp  PerspectiveCalibration.hpp
utils/camera-tool/: CameraTool-Node.cpp  CameraTool.cpp  LICENSE.txt  README.md
utils/camera-tool/includes/: ImageDistance.cpp  ImageDistance.hpp  LensCalibration.cpp  LensCalibration.hpp  PerspectiveCalibration.cpp  PerspectiveCalibration.hpp
utils/camera-tool/node-interface/: ICameraTool.cpp  ICameraTool.hpp
utils/capture-tool/: README.md  capture-tool.py  capture_tool.py
utils/folder-mediainfo/: README.md  folder-mediainfo.js  package.json
utils/intersect-over-union/: README.md  intersect-over-union.js  package.json
utils/intersect-over-union/samples/: interpolated.json  manual.json
utils/linter-uoa-annotation/: README.md  linter-uoa-annotation.js  package.json  uoa-annotation-schema.json
utils/visualise-location/: README.md  visualise_location.py
(+40 files in other folders)
